Fix unnecessary scrollbar on high resolutions

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -39,8 +39,6 @@ a
 
 .container
   flex 1
-  min-height 100vh
-  padding-bottom footerHeight
 
 section
   background #fff
@@ -170,11 +168,9 @@ section:first-child
 footer
   height footerHeight
   line-height footerHeight
-  margin-top footerHeight * -1
   padding 0.5em
   padding-right 1em
   z-index 2
-  position relative
   border-top 1px solid #ECECEC
   font-size 1.5em
   i
